# djprod

./: .gitignore  pyproject.toml
.github/workflows/: publish.yaml
djprod/: cli.py
